--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -16,6 +16,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "use-open-window": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8080",
