--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.10.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-daum-postcode": "^3.1.3",
