--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.9.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
