--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.0",
     "base-64": "^1.0.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.0.1",
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
