--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,11 +10,12 @@
     "axios": "^1.6.0",
     "base-64": "^1.0.0",
     "bootstrap": "^5.3.2",
-    "date-fns": "^3.0.1",
+    "date-fns": "^3.1.0",
     "http-proxy-middleware": "^2.0.6",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.25.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
