feat: Redis, Email 인증 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,14 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+    // email, redis
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.lettuce:lettuce-core:6.2.1.RELEASE'
+
+    // thymeleaf
+    implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
