--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 jwt:
   secret: b68l1FyGcgq+wdIVM6UkOgG9CiZrkgwRvpki3frHZwo=
 
-
 spring:
   profiles:
     group:
@@ -24,6 +23,20 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: nelap12345@naver.com
+    password: qkffkr123$
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
+      mail.smtp.ssl.trust: smtp.naver.com
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 server:
   servlet:
     encoding:
