feat : OAuth2 카카오, 구글 로그인 구현

--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -6,6 +6,8 @@ spring:
           google:
             client-id: 956464906378-ksrqt4kb7s7kv4a7q1qfa3qnpj65nclt.apps.googleusercontent.com
             client-secret: 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
+            redirect-uri: http://localhost:8080/login/oauth2/code/google
+            authorization-grant-type: authorization_code
             scope: profile, email
 
           naver:
@@ -20,12 +22,14 @@ spring:
             client-id: 4e16152617fcf54ee929e4f0aa6f2563
             client-secret: VgsjoMhNvBmYmFLQhc8DDN4FA4WToqQq
             redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-            client-authentication-method: POST
+            client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             scope: profile_nickname, profile_image
             client-name: Kakao
 
         provider:
+          google:
+            token-uri: https://oauth2.googleapis.com/token
           naver:
             authorization_uri: https://nid.naver.com/oauth2.0/authorize
             token_uri: https://nid.naver.com/oauth2.0/token
